--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get:
+  uuid:
+  firebase_storage:
+  firebase_core: 1.6.0
+  firebase_auth: 3.1.1
+  google_sign_in:
+  cloud_firestore:
+  image_picker:
 
 dev_dependencies:
   flutter_test:
